--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,14 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&family=Poppins:wght@400;700&family=Red+Hat+Display:wght@300;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&family=Poppins:wght@100;400;700&family=Red+Hat+Display:wght@300;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&family=Poppins:wght@100;300;400;700&family=Red+Hat+Display:wght@300;500;700;900&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
